# rsla_autonomy

./: .gitmodules  CMakeLists.txt  README.md  package.xml  rsla_autonomy_nodes_model.xml  rsla_autonomy_tree.xml  test_tree.xml
install/: local_setup.sh  setup.sh
install/rsla_autonomy/share/rsla_autonomy/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rsla_autonomy/share/rsla_autonomy/cmake/: rsla_autonomyConfig.cmake
log/: latest_build
src/: autonomy_node.hpp  conversions.hpp  main.cpp  nodes.h  nodes.hpp  test_tree.xml
src/actions/: calibrate_surface.hpp  check_for_trigger.h  go_at_twist.hpp  go_at_wrench.hpp  go_to_pose.hpp  hold_position.hpp  ping.hpp  print_log.h  set_armed.h  set_armed.hpp  turn_towards_object.hpp  wait_for_pose.hpp  wait_for_vision.hpp
src/conditions/: can_see_object.hpp  check_for_hw_arm.hpp  check_for_trigger.h  have_seen_object.hpp  have_seen_object_since.hpp  object_closer_than.hpp
